another pass at consolidating vector libraries